--- a/cyber.html
+++ b/cyber.html
@@ -39,7 +39,7 @@
                         Forensics, and Crypto investigations.</p>
                 </div>
                 <div class='card'>
-                    <h2 class='gradient-text'>🥇 1st</h2>
+                    <h2 class='gradient-text'>🥇 1ST</h2>
                     <p class='label-mono'>FlagRush Champion</p>
                     <p class='mt-20'>Secured 1st place in national forensics and exploitation challenge among hundreds
                         of professionals.</p>
@@ -59,9 +59,10 @@
                 <div class='mission-timeline mt-60'>
                     <div class='mission-item'>
                         <span class='mission-date'>[ JAN 2026 ]</span>
-                        <h3 class='mission-title gradient-text'>FlagRush CTF Victory</h3>
-                        <p class='mission-desc'>🏆 Secured 1st Place. Led deep forensic analysis of compromised server
-                            images, restoring the full attack chain and capturing all critical artifacts.</p>
+                        <h3 class='mission-title gradient-text'>🥇 FlagRush CTF from Exploiters UAE</h3>
+                        <p class='mission-desc'>Secured 1st Place. Led deep forensic analysis of compromised server
+                            images, restoring the full attack chain and capturing all critical artifacts after 36 hours
+                            of intense competition.</p>
                     </div>
 
                     <div class='mission-item'>
@@ -75,7 +76,29 @@
                         <span class='mission-date'>[ OCT 2025 ]</span>
                         <h3 class='mission-title'>Cyber Kingdom National CTF</h3>
                         <p class='mission-desc'>Ranked 7th Overall. Demonstrated mastery in web vulnerability research
-                            and network-based pivot attacks during a 48-hour continuous operation.</p>
+                            and network-based pivot attacks.</p>
+                    </div>
+
+                    <div class='mission-item'>
+                        <span class='mission-date'>[ 2025 - 2026 ]</span>
+                        <h3 class='mission-title gradient-text'>ISEF Global Finals Qualifier</h3>
+                        <p class='mission-desc'>Qualified for the finals of the International Science and Engineering
+                            Fair (ISEF) for two consecutive years (2025 & 2026), representing elite research in global
+                            competition.</p>
+                    </div>
+
+                    <div class='mission-item'>
+                        <span class='mission-date'>[ 2024 ]</span>
+                        <h3 class='mission-title'>HTU SUMO Robot Competition</h3>
+                        <p class='mission-desc'>Participated in the specialized Sumo Robot competition hosted by
+                            Al-Hussein Technical University (HTU), engineering robotic logic for autonomous combat.</p>
+                    </div>
+
+                    <div class='mission-item'>
+                        <span class='mission-date'>[ 2024 ]</span>
+                        <h3 class='mission-title'>JORDAN ARTIFICIAL INTELLIGENCE "JOAI"</h3>
+                        <p class='mission-desc'>Engaged in the JOAI national competition, successfully solving advanced
+                            AI labs and complex algorithmic challenges.</p>
                     </div>
 
                     <div class='mission-item'>
