--- a/experience.html
+++ b/experience.html
@@ -88,11 +88,18 @@
                         and organizational data protection strategies.</p>
                 </div>
                 <div class='card shadow-accent'>
-                    <span class='label-mono'>CERT_02: SCHOLAR</span>
-                    <h3>ASU & WashU Program</h3>
-                    <p style='color: var(--accent);'>International Digital Scholar</p>
-                    <p class='mt-20'>Special selection for an elite cross-university program focusing on disruptive
-                        technologies, global leadership, and advanced algorithmic logic.</p>
+                    <span class='label-mono'>CERT_02: UNIVERSITY_SCHOLAR</span>
+                    <h3>Applied Science Private University (ASPU)</h3>
+                    <p style='color: var(--accent);'>Full Academic Scholarship</p>
+                    <p class='mt-20'>Recognized for exceptional academic potential with a full scholarship to pursue
+                        advanced studies in computer science and secure systems.</p>
+                </div>
+                <div class='card'>
+                    <span class='label-mono'>CERT_03: GLOBAL_INTEL</span>
+                    <h3>University of Washington (WashU)</h3>
+                    <p style='color: var(--accent);'>Global Leadership & Tech Program</p>
+                    <p class='mt-20'>Participated in an elite international program focused on disruptive technologies
+                        and global innovation strategies.</p>
                 </div>
             </div>
         </section>
