--- a/cyber.html
+++ b/cyber.html
@@ -96,7 +96,7 @@
 
                     <div class='mission-item'>
                         <span class='mission-date'>[ 2024 ]</span>
-                        <h3 class='mission-title'>JORDAN ARTIFICIAL INTELLIGENCE "JOAI"</h3>
+                        <h3 class='mission-title'>Jordan Artificial Intelligence (JOAI)</h3>
                         <p class='mission-desc'>Engaged in the JOAI national competition, successfully solving advanced
                             AI labs and complex algorithmic challenges.</p>
                     </div>
