--- a/cyber.html
+++ b/cyber.html
@@ -39,7 +39,8 @@
                         Forensics, and Crypto investigations.</p>
                 </div>
                 <div class='card'>
-                    <h2 class='gradient-text'>🥇 1ST</h2>
+                    <h2><span style='-webkit-text-fill-color: initial;'>🥇</span> <span class='gradient-text'>1ST</span>
+                    </h2>
                     <p class='label-mono'>FlagRush Champion</p>
                     <p class='mt-20'>Secured 1st place in national forensics and exploitation challenge among hundreds
                         of professionals.</p>
@@ -96,7 +97,7 @@
 
                     <div class='mission-item'>
                         <span class='mission-date'>[ 2024 ]</span>
-                        <h3 class='mission-title'>Jordan Artificial Intelligence (JOAI)</h3>
+                        <h3 class='mission-title'>JORDAN ARTIFICIAL INTELLIGENCE "JOAI"</h3>
                         <p class='mission-desc'>Engaged in the JOAI national competition, successfully solving advanced
                             AI labs and complex algorithmic challenges.</p>
                     </div>
