--- a/cyber.html
+++ b/cyber.html
@@ -42,8 +42,8 @@
                     <h2><span style='-webkit-text-fill-color: initial;'>🥇</span> <span class='gradient-text'>1ST</span>
                     </h2>
                     <p class='label-mono'>FlagRush Champion</p>
-                    <p class='mt-20'>Secured 1st place in national forensics and exploitation challenge among hundreds
-                        of professionals.</p>
+                    <p class='mt-20'>Mastered the "Break in. Find the flags. Beat the clock." challenge by Exploit3rs
+                        Cybersecurity Academy, securing 1st place among hundreds of professionals.</p>
                 </div>
                 <div class='card shadow-accent'>
                     <h2 class='gradient-text'>50+</h2>
@@ -60,10 +60,12 @@
                 <div class='mission-timeline mt-60'>
                     <div class='mission-item'>
                         <span class='mission-date'>[ JAN 2026 ]</span>
-                        <h3 class='mission-title gradient-text'>🥇 FlagRush CTF from Exploiters UAE</h3>
-                        <p class='mission-desc'>Secured 1st Place. Led deep forensic analysis of compromised server
-                            images, restoring the full attack chain and capturing all critical artifacts after 36 hours
-                            of intense competition.</p>
+                        <h3 class='mission-title'><span style='-webkit-text-fill-color: initial;'>🥇</span> <span
+                                class='gradient-text'>FlagRush CTF - Exploit3rs Academy</span></h3>
+                        <p class='mission-desc'>🥇 Secured 1st Place. Navigated real-world scenarios and advanced
+                            techniques in the "Break in. Find the flags." challenge hosted by Exploit3rs Cybersecurity
+                            Academy. Executed deep forensic analysis and full-chain exploitation during 36 hours of
+                            intense competition.</p>
                     </div>
 
                     <div class='mission-item'>
