--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
             <div class='grid' style='grid-template-columns: 1.2fr 0.8fr; align-items: center; gap: 80px;'>
                 <div>
                     <span class='label-mono'>RESEARCH_LOG // SESSION_2026</span>
-                    <h2 class='glitch' data-text='SUFFIXSEC LABS'>SUFFIXSEC <span class='gradient-text'>LABS</span></h2>
-                    <p>At SuffixSec, we are not just building applications; we are conducting research experiments at
-                        the intersection of AI, Security, and Code. Our current roadmap focuses on automated forensics
-                        and next-gen SOC workflows.</p>
+                    <span class='label-mono'>RESEARCH_LOG // SESSION_2026</span>
+                    <h2 class='glitch' data-text='SUFFIXSECURITY'>SUFFIX<span class='gradient-text'>SECURITY</span></h2>
+                    <p>At SuffixSecurity, we are engineering an AI-driven startup ecosystem focused on real-time
+                        vulnerability discovery and continuous infrastructure monitoring. Our core mission is to bridge
+                        the gap between AI automation and active cyber defense.</p>
                 </div>
                 <div class='card' style='border-color: rgba(34, 211, 238, 0.4); background: rgba(34, 211, 238, 0.05);'>
                     <span class='label-mono'>ACTIVE_RESEARCH</span>
