--- a/experience.html
+++ b/experience.html
@@ -34,21 +34,21 @@
             <div class='mt-60'>
                 <div class='mb-80'>
                     <span class='label-mono'>EXP_NODE: 0x01 // FOUNDER_CEO</span>
-                    <h2>SuffixSec Agency</h2>
+                    <h2>SuffixSecurity</h2>
                     <p style='color: var(--accent); opacity: 0.9; font-weight: 500;'>[ JANUARY 2024 - PRESENT ]</p>
                     <div class='card shadow-accent'>
-                        <h3 class='gradient-text'>Principal Architect & Lead Researcher</h3>
-                        <p>Leading the development of secure-by-default enterprise applications and managing high-level
-                            infrastructure for global clients.</p>
+                        <h3 class='gradient-text'>Chief Architect & Founder</h3>
+                        <p>SuffixSecurity is an AI-driven cybersecurity startup pioneering automated vulnerability
+                            research and persistent web infrastructure monitoring.</p>
                         <ul class='detailed-list'>
-                            <li>Full-cycle engineering of 25+ production platforms using Next.js, Node.js, and automated
-                                CI/CD pipelines.</li>
-                            <li>Architecture of secure cloud-native infrastructures with active threat-surface
-                                monitoring integrated into the core dev-loop.</li>
-                            <li>Implementation of automated vulnerability scanning (SAST/DAST) across all agency
-                                deployments, achieving 99.9% uptime and zero critical breaches.</li>
-                            <li>Client coordination for high-stakes projects requiring end-to-end encryption and custom
-                                authentication protocols.</li>
+                            <li>Architecting AI models for real-time vulnerability discovery and proactive exploit
+                                mitigation across distributed networks.</li>
+                            <li>Developing intelligent monitoring frameworks that provide 24/7 visibility into global
+                                attack surfaces and security regressions.</li>
+                            <li>Building autonomous auditing tools using ML to analyze traffic patterns and identify
+                                zero-day threats before they materialize.</li>
+                            <li>Leading R&D for next-gen SOAR systems that automate incident response and harden
+                                infrastructure against evolving cyber threats.</li>
                         </ul>
                     </div>
                 </div>
