--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             <div class='grid' style='grid-template-columns: 1.2fr 0.8fr; align-items: center; gap: 80px;'>
                 <div>
                     <span class='label-mono'>RESEARCH_LOG // SESSION_2026</span>
-                    <span class='label-mono'>RESEARCH_LOG // SESSION_2026</span>
-                    <h2 class='glitch' data-text='SUFFIXSECURITY'>SUFFIX<span class='gradient-text'>SECURITY</span></h2>
-                    <p>At SuffixSecurity, we are engineering an AI-driven startup ecosystem focused on real-time
+                    <h2 class='glitch' data-text='SUFFIX SECURITY'>SUFFIX <span class='gradient-text'>SECURITY</span>
+                    </h2>
+                    <p>At Suffix Security, we are engineering an AI-driven startup ecosystem focused on real-time
                         vulnerability discovery and continuous infrastructure monitoring. Our core mission is to bridge
                         the gap between AI automation and active cyber defense.</p>
                 </div>
