--- a/experience.html
+++ b/experience.html
@@ -54,22 +54,22 @@
                 </div>
 
                 <div class='mb-80'>
-                    <span class='label-mono'>EXP_NODE: 0x02 // SOC_ANALYST</span>
-                    <h2>Cyber Security Core</h2>
-                    <p style='color: var(--accent); opacity: 0.9; font-weight: 500;'>[ OCTOBER 2023 - PRESENT ]</p>
+                    <span class='label-mono'>EXP_NODE: 0x02 // SOC_SPECIALIZATION</span>
+                    <h2>SOC Analysis Operations</h2>
+                    <p style='color: var(--accent); opacity: 0.9; font-weight: 500;'>[ MAY 2025 - PRESENT ]</p>
                     <div class='card'>
-                        <h3 class='gradient-text'>Security Operations Specialist (L2/L3)</h3>
-                        <p>Focusing on proactive threat detection, forensic investigation, and deep-dive incident
-                            response.</p>
+                        <h3 class='gradient-text'>Security Operations Specialist (Advanced Training)</h3>
+                        <p>Engaged in a dedicated, high-intensity specialization path focusing on modern SOC workflows,
+                            proactive threat hunting, and automated defense.</p>
                         <ul class='detailed-list'>
-                            <li>Real-time telemetry monitoring using Splunk and custom ELK dashboards for high-volume
-                                log ingestion.</li>
-                            <li>Conducting complex digital forensic investigations using Volatility to uncover hidden
-                                process injections and persistence mechanisms.</li>
-                            <li>Creation of a custom threat-alerting framework that reduced incident response dwell time
-                                by 40% via automated SOAR playbooks.</li>
-                            <li>Collaboration with international CTF teams to research and model new exploitation
-                                vectors observed in external threats.</li>
+                            <li>Mastering real-time telemetry analysis and high-volume log ingestion using Splunk and
+                                custom ELK stacks.</li>
+                            <li>In-depth study and practical application of digital forensics (Volatility, Autopsy) to
+                                identify stealthy persistence mechanisms.</li>
+                            <li>Architecting automated threat-alerting frameworks and SOAR playbooks to optimize
+                                incident response lifecycle.</li>
+                            <li>Continuous research into evolving exploitation vectors and modeling defensive strategies
+                                against modern threat actors.</li>
                         </ul>
                     </div>
                 </div>
@@ -80,19 +80,19 @@
             <span class='label-mono'>ACADEMIC_CREDENTIALS // INTEL</span>
             <h2 class='glitch' data-text='QUALIFICATIONS'>QUALIFICATIONS</h2>
             <div class='grid mt-40'>
-                <div class='card'>
-                    <span class='label-mono'>CERT_01: BTEC_L3</span>
-                    <h3>Islamic Educational College</h3>
-                    <p style='color: var(--accent);'>Advanced Information Technology</p>
-                    <p class='mt-20'>Comprehensive study of software engineering principles, network security protocols,
-                        and organizational data protection strategies.</p>
+                <div class='card shadow-accent'>
+                    <span class='label-mono'>CERT_01: ACADEMIC_TRACK</span>
+                    <h3>Islamic Educational College (IEC)</h3>
+                    <p style='color: var(--accent);'>BTEC Level 3 Scholar</p>
+                    <p class='mt-20'>Pursuing advanced information technology studies within the school, focusing on
+                        software engineering principles and digital security fundamentals.</p>
                 </div>
                 <div class='card shadow-accent'>
                     <span class='label-mono'>CERT_02: UNIVERSITY_SCHOLAR</span>
                     <h3>Applied Science Private University (ASPU)</h3>
-                    <p style='color: var(--accent);'>Full Academic Scholarship</p>
-                    <p class='mt-20'>Recognized for exceptional academic potential with a full scholarship to pursue
-                        advanced studies in computer science and secure systems.</p>
+                    <p style='color: var(--accent);'>Academic Merit Scholarship</p>
+                    <p class='mt-20'>Awarded a prestigious academic scholarship in recognition of outstanding potential
+                        to pursue future advanced studies in computer science and secure systems.</p>
                 </div>
                 <div class='card'>
                     <span class='label-mono'>CERT_03: GLOBAL_INTEL</span>
