--- a/experience.html
+++ b/experience.html
@@ -88,18 +88,19 @@
                         software engineering principles and digital security fundamentals.</p>
                 </div>
                 <div class='card shadow-accent'>
-                    <span class='label-mono'>CERT_02: UNIVERSITY_SCHOLAR</span>
+                    <span class='label-mono'>AWARD_01: UNIVERSITY_SCHOLARSHIP</span>
                     <h3>Applied Science Private University (ASPU)</h3>
-                    <p style='color: var(--accent);'>Academic Merit Scholarship</p>
-                    <p class='mt-20'>Awarded a prestigious academic scholarship in recognition of outstanding potential
-                        to pursue future advanced studies in computer science and secure systems.</p>
+                    <p style='color: var(--accent);'>Future Enrollment Scholarship Award</p>
+                    <p class='mt-20'>Officially awarded a prestigious academic scholarship for future undergraduate
+                        studies, earned through exceptional technical potential and academic merit while still in
+                        secondary school.</p>
                 </div>
                 <div class='card'>
-                    <span class='label-mono'>CERT_03: GLOBAL_INTEL</span>
+                    <span class='label-mono'>AWARD_02: GLOBAL_RECOGNITION</span>
                     <h3>University of Washington (WashU)</h3>
-                    <p style='color: var(--accent);'>Global Leadership & Tech Program</p>
-                    <p class='mt-20'>Participated in an elite international program focused on disruptive technologies
-                        and global innovation strategies.</p>
+                    <p style='color: var(--accent);'>Global Leadership & Tech Program Award</p>
+                    <p class='mt-20'>Selected as a high-school participant for an elite international program, receiving
+                        specialized recognition in disruptive technologies and global innovation strategies.</p>
                 </div>
             </div>
         </section>
